# crewAI

./: SETUP_COMPLETE.md  setup_dev_team.py
ai_dev_team/: README.md  pyproject.toml  quick_demo.py  simple_example.py  start.bat  start.sh  working_demo.py
ai_dev_team/examples/: api_development.md  mobile_application.md  web_application.md
ai_dev_team/output/: working_demo_result.md
ai_dev_team/src/ai_dev_team/: __init__.py  crew.py  main.py
ai_dev_team/src/ai_dev_team/config/: agents.yaml  tasks.yaml
ai_dev_team/src/ai_dev_team/tools/: __init__.py  code_analysis_tool.py  file_system_tool.py  git_tool.py  web_research_tool.py
